modified the blog content

--- a/blogform.html
+++ b/blogform.html
@@ -40,7 +40,7 @@
    <div class="section-to" style="background: #eee;">
       <div class="container">
          <div class="row p-b-md">
-            <div class="col-md-5">
+            <!-- <div class="col-md-5">
                <div class="box-saving m-b-sm">
                   <a href="index.html#" style="margin-top: 56px;" class="logo">
                      <img src="assets/img/logo-text.jpg" class="img-responsive" alt="Topsolar Logo" />
@@ -48,7 +48,7 @@
                   <h1><span class="x-large">SEE HOW YOU CAN</span> SAVE WITH SOLAR ENERGY!</h1>
                </div>
             </div>
-            <div class="col-sm-2">&nbsp;</div>
+            <div class="col-sm-2">&nbsp;</div> -->
             <div class="col-md-5" id="scrollForm">
                <div class="form-banner bg-green text-center">
                   <h6 class="white-text">Complete the form to get free quotes <br /> and find out which rebates are
@@ -234,77 +234,6 @@
          </div>
       </div>
    </div>
-   <!-- <div class="section-map">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-8 center-block col-sm-12 section-title text-center">
-               <h2>Estimated Savings After 20 Years</h2>
-               <p>
-                  <small>
-
-                  </small>
-               </p>
-            </div>
-         </div>
-
-         <div class="row m-t-sm">
-            <div class="col-md-4 col-sm-5 col-xs-12">
-               <ul class="map-marker">
-                  <li><span class="bullet darker"></span> $40,000+*</li>
-                  <li><span class="bullet dark"></span> $30000 - $39,999*</li>
-                  <li><span class="bullet"></span> $20000 - $29,999*</li>
-                  <li><span class="bullet light"></span> $10000 - $19,999*</li>
-                  <li><span class="bullet lighter"></span> $9,999*</li>
-               </ul>
-            </div>
-            <div class="col-md-8 col-sm-7 col-xs-12">
-               <img src="assets/img/map.png" class="img-responsive" />
-            </div>
-         </div>
-      </div>
-   </div> -->
-   <!--section-map end-->
-   <div class="section-advantage" style="visibility: hidden;">
-      <div class="container">
-         <div class="row">
-            <div class="col-sm-12 section-title text-center">
-               <h2>TopSolarOffers Advantages</h2>
-            </div>
-         </div>
-
-         <div class="row text-center m-t-sm m-b-sm">
-            <div class="col-xs-12 col-sm-4">
-               <div class="box-advantage">
-                  <span class="adv-icon icon-bank">Bank</span>
-                  <h6>Take advantage of limited time Federal Tax Credits!</h6>
-               </div>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-               <div class="box-advantage">
-                  <span class="adv-icon icon-down">Bill</span>
-                  <h6>You May Reduce Your Electrical Bill Dramatically!</h6>
-               </div>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-               <div class="box-advantage">
-                  <span class="adv-icon icon-solar">solar panel</span>
-                  <h6>Lease Panels for as little as $0 Down</h6>
-               </div>
-            </div>
-            <!-- <div class="col-xs-6 col-md-3">
-               <div class="box-advantage">
-                  <span class="adv-icon icon-coin">coins</span>
-                  <h6>Claim a 30% Federal Tax Credit upon installation</h6>
-               </div>
-            </div> -->
-         </div>
-         <div class="row">
-            <div class="col-sm-6 text-center center-block">
-               <a href="#scrollForm" class="btn btn-save btn-block">Get a Quote Today!</a>
-            </div>
-         </div>
-      </div>
-   </div>
    <!--section-advantage end-->
    <div class="modal modal-static fade" id="modalProcessing" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
@@ -337,77 +266,6 @@
    <noscript><img
          src='//create.leadid.com/noscript.gif?lac=90e796b0-f1ee-0403-f993-d685e0010cf9&lck=3ffc1e30-e738-636c-c5df-3540db7a21cc&snippet_version=2' /></noscript>
    <!-- =====================Footer Area============================== -->
-   <footer class="footer">
-      <div class="footer">
-         <div class="container">
-            <div class="row footer-links">
-               <div class="col-lg-12 text-center">
-                  <small><a href="terms.php">Terms of Service</a> |</small>
-                  <small><a href="privacy.php">Privacy Policy</a> |</small>
-                  <small><a href="contact.php">Contact Us</a></small>
-                  <!--<small><a href="#">About Us</a></small>-->
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-md-2 text-center">
-                  <img src="assets/img/logo-solar.png" alt="logo" class="img-responsive footer-logo">
-               </div>
-               <div class="col-md-10 disclaimer">
-                  <p>
-                     The operator of this website does not guarantee that energy savings will result as a use of its
-                     service or
-                     any service procured through this website. The operator of this website is not an installer or
-                     vendor of solar
-                     energy products, and is not an agent, representative or broker of installers or vendors of solar
-                     energy products.
-                     This website does not constitute an offer or solicitation to install or otherwise service solar
-                     energy products
-                     and the information submitted by you is not an application for the installation or servicing of
-                     solar products.
-                     The information submitted by you will be shared with participating installers. The operator does
-                     not guarantee
-                     you will be connected with participating vendors, receive installation or service offers to enter
-                     into an
-                     installation agreement. The operator does not endorse, recommend or guarantee the price, product,
-                     availability,
-                     rates or fees of participating installers. Participating installers may perform credit checks with
-                     credit reporting
-                     bureaus or obtain consumer reports through alternative providers Participating installers may
-                     require you to pay a
-                     fee to cover the costs of any such inquiry. Participating vendors may not offer all solar energy
-                     products and solar
-                     energy products may not be available in all states. The states serviced by this website may change
-                     from time to time,
-                     without notice. The operator is not affiliated with the government and this service is not endorsed
-                     or sponsored by
-                     the government or any participating vendor. This service is void where prohibited. This website is
-                     not an independent
-                     consumer protection update and the content provided hereon is for informational purposes only.
-                     Please see the
-                     <a href="privacy.php">Privacy Policy</a> and <a href="terms.php">Terms of Use </a> for more
-                     information. Consult
-                     with your independent legal and financial advisor before acting on any information provided on this
-                     website.
-                  </p>
-                  <p>
-                     *Estimated savings based on a projected annual utility rate increase of 3.16% over the life of the
-                     system. Actual
-                     savings will vary. Savings depends on several factors, including product type, system production,
-                     geography, weather,
-                     shade, electricity usage, full utilization of the 30% solar Investment Tax Credit by the system
-                     owner, and utility rate
-                     structures and rate increases.
-                  </p>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-lg-12">
-                  <p class="copyright">Copyright &copy; 2019 Topsolaroffers.com</p>
-               </div>
-            </div>
-         </div>
-      </div>
-   </footer>
    <script type="text/javascript" src="assets/js/jquery-ui-1.11.4.min.js"></script>
    <script type="text/javascript" src="assets/js/jquery.validate.min.js"></script>
    <script type="text/javascript" src="assets/js/additional-methods.min.js"></script>
