making a separate script to submit blog form

--- a/blogform.html
+++ b/blogform.html
@@ -61,7 +61,7 @@
                      <span id="errorMessage"></span>
                   </div>
                   <form id="msform" class="tin leadForm2" action="https://www.topsolaroffers.com/thank-you.asp"
-                     method="post" enctype="application/x-www-form-urlencoded" onsubmit="return DoSignup(this);">
+                     method="post" enctype="application/x-www-form-urlencoded">
                      <ul id="progressbar">
                         <li class="active">&nbsp;</li>
                         <li>&nbsp;</li>
@@ -272,8 +272,8 @@
    <script type="text/javascript" src="assets/js/jquery.maskedinput.min.js"></script>
    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
    <script type="text/javascript" src="assets/js/smoothscroll.js"></script>
-   <script type="text/javascript" src="assets/js/msform.js"></script>
-   <script type="text/javascript" src="assets/js/validate-form.js"></script>
+   <script type="text/javascript" src="assets/js/blog-msform.js"></script>
+   <script type="text/javascript" src="assets/js/blog-validate-form.js"></script>
    <link href="assets/css/katch.css" rel="stylesheet">
 
 </body>
