--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                      <span id="errorMessage"></span>
                   </div>
                   <form id="msform" class="tin leadForm2" action="https://www.topsolaroffers.com/thank-you.asp"
-                     method="post" enctype="application/x-www-form-urlencoded" onsubmit="return DoSignup(this);">
+                     method="post" enctype="application/x-www-form-urlencoded">
                      <ul id="progressbar">
                         <li class="active">&nbsp;</li>
                         <li>&nbsp;</li>
